--- a/server/package.json
+++ b/server/package.json
@@ -13,9 +13,12 @@
     "bcrypt": "^1.0.2",
     "body-parser": "^1.17.2",
     "cookie-session": "^2.0.0-beta.2",
+    "dotenv": "^4.0.0",
     "ejs": "^2.5.6",
     "express": "^4.15.3",
     "knex": "^0.13.0",
+    "knex-logger": "^0.1.0",
+    "morgan": "^1.8.2",
     "pg": "^6.4.0",
     "socket.io": "^2.0.3"
   },
