--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start:dev": "./node_modules/.bin/nodemon server.js"
+    "start": "./node_modules/.bin/nodemon server.js"
   },
   "keywords": [],
   "author": "",
