--- a/search-client/package.json
+++ b/search-client/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "webpack": "./node_modules/.bin/webpack-dev-server"
+    "webpack1": "./node_modules/.bin/webpack-dev-server"
   },
   "keywords": [],
   "author": "",
