--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "express": "^4.15.3",
     "knex": "^0.11.7",
     "knex-logger": "^0.1.0",
+    "knex-migrate": "^1.3.0",
     "morgan": "^1.8.2",
     "pg": "^6.4.0",
     "socket.io": "^2.0.3"
