--- a/chat-client/package.json
+++ b/chat-client/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "webpack:dev": "./node_modules/.bin/webpack-dev-server"
+    "webpack2": "./node_modules/.bin/webpack-dev-server"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +17,7 @@
     "babel-preset-stage-0": "^6.24.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "dotenv":"4.0.0",
     "webpack": "^3.2.0"
   },
   "devDependencies": {
