--- a/server/package.json
+++ b/server/package.json
@@ -21,7 +21,9 @@
     "knex-migrate": "^1.3.0",
     "morgan": "^1.8.2",
     "pg": "^6.4.0",
-    "socket.io": "^2.0.3"
+    "react-cookie": "^2.0.8",
+    "socket.io": "^2.0.3",
+    "uuid": "3.1.0"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
