--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "bcrypt": "^1.0.2",
     "body-parser": "^1.17.2",
-    "cookie-session": "^2.0.0-beta.2",
+    "express-session": "1.15.3",
     "dotenv": "^4.0.0",
     "ejs": "^2.5.6",
     "express": "^4.15.3",
