--- a/chat-client/package.json
+++ b/chat-client/package.json
@@ -15,11 +15,12 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "dotenv": "4.0.0",
+    "dotenv": "^4.0.0",
     "react": "^15.6.1",
     "react-cookie": "^2.0.8",
     "react-dom": "^15.6.1",
     "socket.io": "^2.0.3",
+    "socket.io-client": "^2.0.3",
     "webpack": "^3.2.0"
   },
   "devDependencies": {
