--- a/search-client/package.json
+++ b/search-client/package.json
@@ -15,7 +15,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "dotenv": "4.0.0",
+    "dotenv": "^4.0.0",
     "moment": "^2.18.1",
     "react": "^15.6.1",
     "react-day-picker": "^6.1.0",
