--- a/server/package.json
+++ b/server/package.json
@@ -12,10 +12,10 @@
   "dependencies": {
     "bcrypt": "^1.0.2",
     "body-parser": "^1.17.2",
-    "express-session": "1.15.3",
     "dotenv": "^4.0.0",
     "ejs": "^2.5.6",
     "express": "^4.15.3",
+    "express-session": "^1.15.3",
     "express-socket.io-session": "^1.3.2",
     "knex": "^0.11.7",
     "knex-logger": "^0.1.0",
