--- a/search-client/package.json
+++ b/search-client/package.json
@@ -22,6 +22,7 @@
     "react-day-picker": "^6.1.0",
     "react-dom": "^15.6.1",
     "react-google-maps": "^7.1.0",
+    "react-moment": "^0.6.0",
     "webpack": "^3.2.0"
   },
   "devDependencies": {
