--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "geocoder": "^0.2.3",
     "knex": "^0.11.7",
     "knex-logger": "^0.1.0",
+    "moment": "^2.18.1",
     "morgan": "^1.8.2",
     "pg": "^6.4.0",
     "react-cookie": "^2.0.8",
