add command to generate webpack code

--- a/chat-client/package.json
+++ b/chat-client/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "webpack2": "./node_modules/.bin/webpack-dev-server"
+    "webpack2": "./node_modules/.bin/webpack-dev-server",
+    "build-chat": "node_modules/.bin/webpack"
   },
   "keywords": [],
   "author": "",
