--- a/search-client/package.json
+++ b/search-client/package.json
@@ -19,6 +19,7 @@
     "babel-preset-stage-0": "^6.24.1",
     "dotenv": "^4.0.0",
     "moment": "^2.18.1",
+    "moment-range": "^3.0.3",
     "react": "^15.6.1",
     "react-day-picker": "^6.1.0",
     "react-dom": "^15.6.1",
