--- a/chat-client/package.json
+++ b/chat-client/package.json
@@ -18,9 +18,11 @@
     "babel-preset-stage-0": "^6.24.1",
     "dotenv": "^4.0.0",
     "emoji-mart": "^1.0.1",
+    "moment": "^2.18.1",
     "react": "^15.6.1",
     "react-cookie": "^2.0.8",
     "react-dom": "^15.6.1",
+    "react-moment": "^0.6.0",
     "socket.io": "^2.0.3",
     "socket.io-client": "^2.0.3",
     "webpack": "^3.2.0"
