--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "server/server.js",
   "dependencies": {},
   "devDependencies": {},
+  "engines": {
+      "node": "~8.1.4"
+    },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
