--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "express": "^4.15.3",
     "express-session": "^1.15.3",
     "express-socket.io-session": "^1.3.2",
+    "fullcalendar": "^3.4.0",
     "geocoder": "^0.2.3",
     "knex": "^0.11.7",
     "knex-logger": "^0.1.0",
