--- a/styles/package.json
+++ b/styles/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap-sass": "^3.3.7",
+    "moment": "^2.18.1",
     "node-sass": "^4.5.3",
     "react-day-picker": "^6.1.0"
   }
